<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expiry Sync</string>
    <string name="action_settings">Settings</string>
    <string name="search_field">Search in your entries</string>
    <string name="button_search">Search</string>
    <string name="action_search">Search</string>
    <string name="barcode">Barcode</string>
    <string name="product_name">Name</string>
    <string name="product_description">Description</string>
    <string name="expiration_date">Expiration date</string>
    <string name="amount">Amount</string>
    <string name="add_product">Add product</string>
    <string name="save_and_add_product">Save and add product</string>
    <string name="edit_product">Edit product</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="title_activity_add_product">Add product</string>
    <string name="default_value">Default</string>
    <string name="title_activity_edit_product">Edit product</string>
    <string name="title_activity_login">Login</string>
    <string name="login_succeeded">Login succeeded</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_register">Register</string>
    <string name="registration_succeeded">Registration succeeded</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration">Registration</string>
    <string name="choose_sorting_title">Choose sorting</string>
    <string name="sorting_last_added_option">last added</string>
    <string name="sorting_expiration_date_option">expiration date</string>
    <string name="sorting_name_option">alphabetically</string>
    <string name="scan_barcode">Scan</string>
    <string name="delete_product">Delete product</string>
    <string name="delete_selected_products">Delete selected products</string>
    <string name="delete_product_button_text">Delete</string>
    <string name="really_delete_product">Are you sure you wish to delete this product?</string>
    <string name="really_delete_selected_products">Are you sure you wish to delete the selected products?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="host">Host</string>
    <string name="delete_selected_title">Delete selected</string>
    <string name="recipe_search_title">Recipe search</string>
    <string name="recipe">Recipe</string>
    <string name="error_starting_search">Could not start the search - Please check your "search engine URL" setting</string>
    <string name="sort_title">Entry sorting</string>
    <string name="login_title">Login</string>
    <string name="logout_title">Logout</string>
    <string name="exit_title">Exit</string>
    <string name="signup_title">Signup</string>
    <string name="synchronize_title">Synchronize</string>
    <string name="email">Email</string>
    <string name="email_address_or_username">Email address or username</string>
    <string name="email_address_optional">Email address (optional)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="either_username_or_email_description">Enter an email address or a username (or both):</string>
    <string name="days_before_medium">Days before marking as medium</string>
    <string name="days_before_bad">Days before marking as bad</string>
    <string name="alert_time">At what time to show "EAT-NOW" alerts</string>
    <string name="offline_mode">Offline mode</string>
    <string name="search_url">Search engine URL (for recipe search)</string>
    <string name="stay_in_offline_mode">always work in offline mode</string>
    <string name="take_product_photo">Take Photo</string>
    <string name="set_offline_mode_title">Offline mode</string>
    <string name="set_offline_mode_question">Do always want to use this app in offline mode (can still be changed in the settings after your choice)</string>
    <plurals name="numberOfItemsToBeEaten">
        <item quantity="one">Eat one thing NOW!</item>
        <item quantity="other">Eat %d things NOW!</item>
    </plurals>
    <string name="loading">Loading. Please wait&#8230;</string>
    <string name="scanning">Scanning&#8230; Place the camera in front of the barcode</string>
    <string name="enter_manually">Enter manually</string>
    <string name="not_found">Not found</string>
    <string name="logout_succeeded">Logout succeeded</string>
    <string name="logout_failed">Logout failed</string>
    <string name="saving_entry_failed">Saving the product entry failed</string>
    <string name="name_may_not_be_empty">Name may not be empty</string>
    <string name="amount_invalid">Amount must be an integer >= 1</string>
    <string name="choose_server_title">Choose a server</string>
    <string name="choose_server">This app connects to a server to retrieve information about barcodes and 
 synchronize your entries between multiple devices.

The following servers - provided by the community (no warranty!) - are available:</string>
		<string name="default_server_name">Default</string>
		<string name="default_server_description">Simple server by the app publisher; no barcode data available (except for data provided by the community)</string>
		<string name="offline_mode_server_name">Offline mode</string>
		<string name="offline_mode_server_description">Entries won\'t sync with the server. When scanning product barcodes, data will only be downloaded (from the default server).</string>
		<string name="confirm_server_choice">Are you sure about your choice?</string>
    <string name="server_chosen">Server chosen</string>
    <string name="setting_change_at_your_own_risk">Advanced setting - change at your own risk</string>
</resources>
