<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expiry_sync="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_add_product"
        android:icon="@drawable/ic_input_add"
        android:title="@string/add_product"
        expiry_sync:showAsAction="always"/>
    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_selected_title"
        expiry_sync:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_recipe_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/recipe_search_title"
        expiry_sync:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sorting"
        android:icon="@drawable/ic_menu_sort_alphabetically"
        android:title="@string/sort_title"
        expiry_sync:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:title="@string/action_settings"
        expiry_sync:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_menu_login"
        android:title="@string/login_title"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_menu_stop"
        android:title="@string/logout_title"/>
    
    <item
        android:id="@+id/action_synchronize"
        android:title="@string/synchronize_title"/>
    
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit_title"/>
    

</menu>