<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/barcode_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/barcode"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/scan_barcode_btn"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:contentDescription="@string/scan_barcode"
                android:onClick="scanBarcode"
                android:padding="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_scan_barcode" />
        </LinearLayout>

        <EditText
            android:id="@+id/product_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiration_date" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": " />
        </LinearLayout>

        <DatePicker
            android:id="@+id/expiration_date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <EditText
            android:id="@+id/amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number" />

        <EditText
            android:id="@+id/product_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/product_photo_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="takePhoto"
                android:text="@string/take_product_photo" />

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="@dimen/product_img_width"
                android:layout_height="@dimen/product_img_height" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>